<resources>
    <string name="app_name">SoftwareEngineeringCode</string>
    <string name="title_home">Home</string>
    <string name="title_write_report">Write A Report</string>
    <string name="title_view_report">View Past Reports</string>
    <string name="write_report_title">Title:</string>
    <string name="write_report_take_picture">Take Picture:</string>
    <string name="write_report_text">Write Report:</string>
    <string name="submit_button_text">Submit</string>
    <string name="take_photo">Take Photo</string>
    <string name="enter_title_text">Enter Report Name</string>
    <string name="type_report_text">Type Report Here</string>
    <string name="before_submission">Before submitting, a title, at least one image, and report details must be included.</string>
    <string name="number_photots">0 photos</string>
    <string name="home_report_title_text">Report Title:</string>
    <string name="home_weather_text">Weather Details:</string>
    <string name="home_details_text">Details:</string>
    <string name="home_date_text">Date:</string>
    <string name="update_list">Update List</string>
    <string name="next_image_button">Next Image</string>
    <string name="previous_image_button">Previous Image</string>
    <string name="show_last_report">Last Report</string>
    <string name="show_selected_report">Selected Report</string>
</resources>
